--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,9 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.30'
 	annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
+	//valid
+	implementation 'jakarta.validation:jakarta.validation-api:3.0.2'
+
 	//javadoc
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.3.0'
 
